--- a/python/student/workshop/2019.01.08_workshop.ipynb
+++ b/python/student/workshop/2019.01.08_workshop.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "단어입력: 1231\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def palindrome(word):\n",
+    "    if(word == word[::-1]):\n",
+    "        print(\"True\")\n",
+    "    else:\n",
+    "        print(\"False\")\n",
+    "    \n",
+    "word = input(\"단어입력: \")\n",
+    "palindrome(word)"
+   ]
   }
  ],
  "metadata": {
