--- a/python/ssafy_python/2019.01.07.md
+++ b/python/ssafy_python/2019.01.07.md
@@ -145,3 +145,33 @@ sum1 = sum1 ** 2 #합의 제곱
 
 print(sum1 - sum2)
 ```
+
+
+
+### 9. 달력 출력하기
+
+![1546906626344](C:\Users\student\AppData\Roaming\Typora\typora-user-images\1546906626344.png)
+
+```python
+calender = {
+    1:31, 2:28, 3:31, 4:30, 5:30, 6:30,
+    7:30, 8:30, 9:30, 10:30, 11:30, 12:31
+}
+
+weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr','Sa', 'Su']
+
+for month, count_day in calender.items():
+    count = 0
+    print(f'{month:10}','월')
+    for day in weeks:
+        print(f'{day:2}', end = ' ')
+    print()
+    
+    for i in range(1, count_day + 1):
+        print(f'{i:2}', end = ' ')
+        count += 1
+        if count == 7:
+            print()
+            count = 0
+```
+
