--- a/python/student/problem2/P02_Python.ipynb
+++ b/python/student/problem2/P02_Python.ipynb
@@ -159,6 +159,218 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0000000\n",
+      "100\n",
+      "  100\n",
+      "  100\n",
+      "  100  100\n",
+      "  100  100\n",
+      "Mo Tu We Th Fr Sa \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30 31 "
+     ]
+    }
+   ],
+   "source": [
+    "a = 100\n",
+    "print(\"0000000\")\n",
+    "print(\"%d\" % a)\n",
+    "print(\"%5d\" % a)\n",
+    "print(f'{a:5}')\n",
+    "print(\"%5d%5d\" % (a,a))\n",
+    "print(f'{a:5}{a:5}')\n",
+    "\n",
+    "calender = {\n",
+    "    1:31, 2:28, 3:31, 4:30, 5:30, 6:30\n",
+    "    7:30, 8:30, 9:30, 10:30, 11:30, 12:31\n",
+    "}\n",
+    "\n",
+    "weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr','Sa']\n",
+    "for day in weeks:\n",
+    "    print(f'{day:2}', end = ' ')\n",
+    "print()\n",
+    "    \n",
+    "count = 0\n",
+    "for i in range(1,32):\n",
+    "    print(f'{i:2}', end = ' ')\n",
+    "    count += 1\n",
+    "    if count == 7:\n",
+    "          print()\n",
+    "          count = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         1 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30 31          2 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "         3 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30 31          4 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30          5 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30          6 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30          7 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30          8 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30          9 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30         10 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30         11 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30         12 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      " 1  2  3  4  5  6  7 \n",
+      " 8  9 10 11 12 13 14 \n",
+      "15 16 17 18 19 20 21 \n",
+      "22 23 24 25 26 27 28 \n",
+      "29 30 31 "
+     ]
+    }
+   ],
+   "source": [
+    "calender = {\n",
+    "    1:31, 2:28, 3:31, 4:30, 5:30, 6:30,\n",
+    "    7:30, 8:30, 9:30, 10:30, 11:30, 12:31\n",
+    "}\n",
+    "\n",
+    "weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr','Sa', 'Su']\n",
+    "\n",
+    "for month, count_day in calender.items():\n",
+    "    count = 0\n",
+    "    print(f'{month:10}','월')\n",
+    "    for day in weeks:\n",
+    "        print(f'{day:2}', end = ' ')\n",
+    "    print()\n",
+    "    \n",
+    "    for i in range(1, count_day + 1):\n",
+    "        print(f'{i:2}', end = ' ')\n",
+    "        count += 1\n",
+    "        if count == 7:\n",
+    "            print()\n",
+    "            count = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         1 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         2 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         3 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         4 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         5 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         6 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         7 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         8 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "         9 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "        10 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "        11 월\n",
+      "Mo Tu We Th Fr Sa Su \n",
+      "        12 월\n",
+      "Mo Tu We Th Fr Sa Su \n"
+     ]
+    }
+   ],
+   "source": [
+    "calender = {\n",
+    "    1:31, 2:28, 3:31, 4:30, 5:30, 6:30,\n",
+    "    7:30, 8:30, 9:30, 10:30, 11:30, 12:31\n",
+    "}\n",
+    "\n",
+    "weeks = ['Mo', 'Tu', 'We', 'Th', 'Fr','Sa', 'Su']\n",
+    "\n",
+    "for month, count_day in calender.items():\n",
+    "    count = 0\n",
+    "    print(f'{month:10}','월')\n",
+    "    for day in weeks:\n",
+    "        print(f'{day:2}', end = ' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
