--- a/python/student/workshop/2019.01.08_workshop.ipynb
+++ b/python/student/workshop/2019.01.08_workshop.ipynb
@@ -24,6 +24,32 @@
     "word = input(\"단어입력: \")\n",
     "palindrome(word)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 강사님 코드\n",
+    "\n",
+    "def is_palindrome(word):\n",
+    "    list_word = list(word)\n",
+    "    for i in range(len(list_word) // 2):\n",
+    "        if list_word[i] !=list_word[-i -1]: # [-1] 은 문자열 맨 뒤에꺼!\n",
+    "            return False\n",
+    "        return True\n",
+    "\n",
+    "print(is_palindrome('level'))"
+   ]
   }
  ],
  "metadata": {
